--- a/.github/workflows/ci6.yml
+++ b/.github/workflows/ci6.yml
@@ -2,7 +2,7 @@ name: Daily Scraper Delhi
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # Runs daily at 6:30 AM IST → 1:00 AM UTC
+    - cron: '0 1 * * *'   # Runs daily at 6:30 AM IST → 1:00 AM UTC
   workflow_dispatch:
 
 jobs:
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Setup SSH
+
+    # ✅ Step 1: Setup SSH
     - name: Setup SSH
       run: |
         mkdir -p ~/.ssh
@@ -20,38 +21,39 @@ jobs:
         ssh-add ~/.ssh/id_ed25519
         ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-    # Step 2: Clone private repo
+    # ✅ Step 2: Clone Private Repo
     - name: Clone private repo
       run: |
         git clone git@github.com:LongwayDataTeam/Amz_Flp_Data_Scraper_Delhi.git
 
-    # Step 3: Set up Python
+    # ✅ Step 3: Set up Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: "3.10"
 
-    # Step 4: Install system dependencies (Chrome & ChromeDriver)
-    - name: Install system dependencies
+    # ✅ Step 4: Install ONLY Google Chrome (No ChromeDriver)
+    - name: Install Google Chrome
       run: |
         sudo apt-get update
-        sudo apt-get install -y wget unzip jq xvfb libnss3 libxss1 libxi6 fonts-liberation libu2f-udev
+        sudo apt-get install -y wget unzip xvfb libnss3 libxss1 libxi6 fonts-liberation libu2f-udev
+
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
-        DRIVER_URL=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json" \
-          | jq -r '.channels.Stable.downloads.chromedriver[] | select(.platform == "linux64") | .url')
-        wget -O chromedriver.zip "$DRIVER_URL"
-        unzip chromedriver.zip
-        sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
-        sudo chmod +x /usr/local/bin/chromedriver
 
-    # Step 5: Install Python dependencies
+        google-chrome --version
+
+    # ✅ Step 5: Install Python Dependencies
     - name: Install Python dependencies
       run: |
         cd Amz_Flp_Data_Scraper_Delhi
+        pip install --upgrade pip
         pip install -r requirements.txt
-    
-    # Step 6: Run your scraper from the private repo
+
+        # ✅ Mandatory for correct ChromeDriver match
+        pip install webdriver-manager
+
+    # ✅ Step 6: Run Scraper Script
     - name: Run scraping script
       env:
         GSHEET_CREDENTIALS: ${{ secrets.GSHEET_CREDENTIALS }}
